# OMG_Depth_Fusion

./: README.md
Data/ICL_NUIM/living_room_traj0_frei_png_short/: associations.txt  calib_params.xml  depth.txt  groundtruth.txt  rgb.txt
Data/TUM_RGBD/sitting_static_short/: accelerometer.txt  calib_params.xml  depth.txt  groundtruth.txt  rgb.txt  rgb.txt~
OMG/: CMakeLists.txt  Dataset.cpp  Dataset.h  OMG.sln  OMG.vcxproj  OMG.vcxproj.filters  OMGUtilities.hpp  README.txt  run_OMG.cpp
